# ml-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  CLA.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose-dev.yml  docker-compose-no-kafka.yml  docker-compose.dev.yml  docker-compose.kafka.yml  docker-compose.yml  pyproject.toml
.github/: cla-assistant.json
.github/workflows/: code-quality.yml  deploy.yml  tests.yml
backend/: Dockerfile  alembic.ini  generate_diagram.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 3c7b12a528e3_initial_autogenerate.py  b6a32e341acd_initial_migration_with_simplified_.py  d443e7419559_update_session_table_remove_name_add_.py
backend/app/: admin.py  broker.py  database.py  deps.py  init_db.py  kafka_producer.py  main.py  models.py  tasks.py
backend/app/api/api_v1/endpoints/: api.py  auth.py  chat.py  prompt_check.py  visualization.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  message.py  prompt.py  user.py
backend/app/routes/: __init__.py  auth.py  chat.py  prompt_check.py  tokens.py  users.py  visualization.py
backend/app/schemas/: message.py  tokens.py  user.py
backend/app/services/: embeddings.py
backend/tests/: conftest.py  test_chat_messages.py
client/: client.py  main.py
client/example/: README.md  main.py  requirements.txt
client/src/: CallbackHandler.py  callback_handler.md  client.py
frontend/: entrypoint.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  SettingsInit.tsx  index.css  settings.tsx
frontend/src/components/Anomaly/: Anomaly.tsx
frontend/src/components/Auth/: Login.tsx  Register.tsx
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/Prompt/: Prompt.tsx
frontend/src/components/Settings/: Settings.tsx
frontend/src/components/Tracking/: Tracking.tsx
frontend/src/components/messages/: MessageDetail.tsx
frontend/src/components/table/: messages-table.tsx
frontend/src/components/ui/: data-table-pagination.tsx  data-table-toolbar.tsx  data-table.tsx  json-viewer.tsx
frontend/src/config/: api.ts
processing/: Dockerfile  prompt_save.py
runner/: .env.batch.example  anomaly_detection.py  garak_config.yaml  llm_caller.py  main.py  mymodule.py  probes.json  pyproject.toml  runner.py
runner/tests/: test_batch_processing.py  test_metrics.py
scripts/: pyproject.toml  requirements.txt  upload_sample_messages.py
