[project]
name = "ml-checker-backend"
version = "0.1.0"
description = "Backend for ML-Checker application"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.98.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.17",
    "psycopg2-binary>=2.9.6",
    "pydantic>=1.10.9,<2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "python-multipart>=0.0.5",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
