[project]
name = "ml-checker-backend"
version = "0.1.0"
description = "Backend for ML-Checker application"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.17",
    "taskiq-fastapi>=0.3.0",
    "taskiq>=0.11.0",
    "taskiq-postgres>=0.7.0",
    "psycopg2-binary>=2.9.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "python-multipart>=0.0.5",
    "email-validator>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.29.0",
    "sqladmin>=0.15.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "transformers>=4.20.0",
    "torch>=2.0.0",
    "numpy>=1.24.4",
    "scikit-learn>=1.0.0",
    "bokeh>=3.0.0",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "pytest>=7.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "alembic*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

